--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,18 +17,18 @@
             android:id="@+id/textView1"
             android:layout_width="203dp"
             android:layout_height="wrap_content"
-            android:text="Semester Start Date"
+            android:paddingLeft="8dp"
+            android:text="@string/enter_start_date"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:paddingLeft="8dp"/>
+            android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editText1"
-            android:layout_width="wrap_content"
+            android:id="@+id/startDate"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="mm/dd/yyyy"
+            android:hint="@string/date_prompt"
             android:inputType="date"
             android:textAlignment="center" />
 
@@ -47,93 +47,103 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:paddingLeft="8dp"
-            android:text="Semester End Date"
+            android:text="@string/enter_end_date"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/endDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="mm/dd/yyyy"
+            android:hint="@string/date_prompt"
             android:inputType="date"
             android:textAlignment="center" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="48dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="213dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Number of Courses"
-            android:textSize="22sp"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:layout_weight="1"
+            android:paddingLeft="8dp"
+            android:text="@string/num_courses"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/NumCourses"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="48dp"
             android:layout_weight="1" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/TextView4"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Enter Course Info!"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="469dp">
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:paddingLeft="8dp"
+            android:text="@string/weekday_hours"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+        <EditText
+            android:id="@+id/WeekdayTime"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:ems="10"
+            android:hint="Type a number"
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="179dp"
-                    android:layout_height="43dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:text="Course Name"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/editText4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="Course Name"
-                    android:inputType="textPersonName" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:text="@string/weekend_hours"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/WeekendTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Type a number"
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/enter_course_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter Course Info!" />
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/canvas"
+        android:layout_width="match_parent"
+        android:layout_height="469dp"/>
 
 </LinearLayout>
