Building dynamic GUI and logic at the same time. xml file for Second activity added.
Google API only allows reading and writing data. Need code for a calendar display that provides a summary of study times that is preferably filterable.

--- a/app/src/main/res/layout/activity_secondinput.xml
+++ b/app/src/main/res/layout/activity_secondinput.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".SecondInputActivity">
 
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/canvas"
+        android:layout_width="match_parent"
+        android:layout_height="613dp" />
+
 </LinearLayout>
