--- a/app/src/main/res/layout/course_form.xml
+++ b/app/src/main/res/layout/course_form.xml
@@ -3,68 +3,55 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/TextView1"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="23dp"
-        android:text="Course Name"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/TextView2"
-        android:layout_width="147dp"
-        android:layout_height="35dp"
+        android:layout_height="36dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="70dp"
-        android:text="Course Weight"
+        android:layout_marginTop="14dp"
+        android:text="Course Name"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/course_name"
-        android:layout_width="199dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="35dp"
-        android:layout_toEndOf="@+id/TextView1"
+        android:layout_marginStart="-7dp"
+        android:layout_marginTop="6dp"
+        android:layout_toEndOf="@+id/textView7"
         android:ems="10"
         android:hint="Course Name"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textSize="14sp" />
 
     <EditText
         android:id="@+id/course_weight"
-        android:layout_width="196dp"
+        android:layout_width="178dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/course_name"
+        android:layout_alignStart="@+id/course_name"
         android:layout_alignEnd="@+id/course_name"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="34dp"
-        android:layout_toEndOf="@+id/TextView2"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="0dp"
         android:ems="10"
         android:hint="Percentage of Semester"
         android:inputType="number"
+        android:textAlignment="center"
         android:textSize="14sp" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="142dp"
-        android:layout_height="37dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="120dp"
+        android:layout_width="141dp"
+        android:layout_height="34dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignStart="@+id/textView2"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="14dp"
         android:text="Final Weight"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -73,91 +60,92 @@
         android:id="@+id/textView4"
         android:layout_width="142dp"
         android:layout_height="35dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="170dp"
+        android:layout_below="@+id/textView3"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="14dp"
         android:text="Midterm Weight"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="171dp"
-        android:layout_height="37dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="222dp"
+        android:layout_width="170dp"
+        android:layout_height="35dp"
+        android:layout_below="@+id/textView4"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="17dp"
         android:text="Assignment Weight"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/assignment_weight"
-        android:layout_width="152dp"
+        android:layout_width="151dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/midterm_weight"
+        android:layout_alignStart="@+id/midterm_weight"
         android:layout_alignEnd="@+id/midterm_weight"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="212dp"
-        android:layout_marginEnd="2dp"
-        android:layout_toEndOf="@+id/textView5"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="0dp"
         android:ems="10"
         android:hint="Percentage of Course"
         android:inputType="number"
+        android:textAlignment="center"
         android:textSize="14sp" />
 
     <EditText
         android:id="@+id/midterm_weight"
-        android:layout_width="154dp"
+        android:layout_width="151dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/final_weight"
+        android:layout_alignStart="@+id/final_weight"
         android:layout_alignEnd="@+id/final_weight"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="161dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="0dp"
-        android:layout_toEndOf="@+id/textView4"
         android:ems="10"
         android:hint="Percentage of Course"
         android:inputType="number"
+        android:textAlignment="center"
         android:textSize="14sp" />
 
     <EditText
         android:id="@+id/final_weight"
-        android:layout_width="154dp"
+        android:layout_width="158dp"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/course_weight"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="108dp"
-        android:layout_marginEnd="2dp"
-        android:layout_toEndOf="@+id/textView3"
+        android:layout_below="@+id/course_weight"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_toEndOf="@+id/textView7"
         android:ems="10"
         android:hint="Percentage of Course"
         android:inputType="number"
+        android:textAlignment="center"
         android:textSize="14sp" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView7"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="-3dp"
-        android:layout_marginBottom="230dp"
+        android:layout_below="@+id/number_midterms"
+        android:layout_alignStart="@+id/textView9"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="7dp"
         android:text="Other Assignment or Quiz Date(s)"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/assignment2"
-        android:layout_width="186dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="184dp"
+        android:layout_below="@+id/textView8"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="8dp"
+        android:layout_toEndOf="@+id/assignment1"
         android:ems="10"
         android:hint="YYYY-MM-DD"
         android:inputType="textPersonName"
@@ -166,12 +154,14 @@
 
     <EditText
         android:id="@+id/assignment3"
-        android:layout_width="172dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginBottom="139dp"
+        android:layout_below="@+id/assignment1"
+        android:layout_alignStart="@+id/assignment1"
+        android:layout_alignEnd="@+id/assignment1"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="0dp"
         android:ems="10"
         android:hint="YYYY-MM-DD"
         android:inputType="textPersonName"
@@ -180,13 +170,13 @@
 
     <EditText
         android:id="@+id/assignment4"
-        android:layout_width="186dp"
+        android:layout_width="168dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="139dp"
+        android:layout_below="@+id/assignment2"
+        android:layout_alignEnd="@+id/assignment2"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/assignment3"
         android:ems="10"
         android:hint="YYYY-MM-DD"
@@ -196,12 +186,14 @@
 
     <EditText
         android:id="@+id/assignment5"
-        android:layout_width="170dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/assignment3"
         android:layout_alignStart="@+id/assignment3"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginBottom="91dp"
+        android:layout_alignEnd="@+id/assignment3"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="0dp"
         android:ems="10"
         android:hint="YYYY-MM-DD"
         android:inputType="textPersonName"
@@ -210,13 +202,13 @@
 
     <EditText
         android:id="@+id/assignment6"
-        android:layout_width="185dp"
+        android:layout_width="184dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/assignment4"
         android:layout_alignEnd="@+id/assignment4"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="91dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/assignment5"
         android:ems="10"
         android:hint="YYYY-MM-DD"
@@ -226,26 +218,25 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="46dp"
+        android:layout_below="@+id/assignment5"
+        android:layout_alignStart="@+id/assignment5"
+        android:layout_alignEnd="@+id/textView9"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="0dp"
         android:text="If you don't know the dates, how many assignments will you have?" />
 
     <EditText
         android:id="@+id/assignment1"
-        android:layout_width="169dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="182dp"
-        android:layout_toStartOf="@+id/assignment2"
+        android:layout_below="@+id/textView8"
+        android:layout_alignStart="@+id/textView8"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="7dp"
         android:ems="10"
         android:hint="YYYY-MM-DD"
         android:inputType="textPersonName"
@@ -256,22 +247,24 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textView5"
         android:layout_alignStart="@+id/textView5"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="272dp"
+        android:layout_marginTop="13dp"
         android:text="Final Exam Date"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/final_date"
-        android:layout_width="148dp"
+        android:layout_width="151dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="77dp"
-        android:layout_marginTop="259dp"
-        android:layout_toEndOf="@+id/textView6"
+        android:layout_below="@+id/assignment_weight"
+        android:layout_alignStart="@+id/assignment_weight"
+        android:layout_alignEnd="@+id/assignment_weight"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="0dp"
         android:ems="10"
         android:hint="YYYY-MM-DD"
         android:inputType="text"
@@ -280,14 +273,14 @@
 
     <EditText
         android:id="@+id/midterm_date1"
-        android:layout_width="150dp"
+        android:layout_width="145dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/final_date"
+        android:layout_alignStart="@+id/final_date"
         android:layout_alignEnd="@+id/final_date"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="-1dp"
-        android:layout_marginBottom="379dp"
-        android:layout_toEndOf="@+id/textView7"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="0dp"
         android:ems="10"
         android:hint="YYYY-MM-DD"
         android:inputType="textPersonName"
@@ -296,14 +289,14 @@
 
     <EditText
         android:id="@+id/midterm_date2"
-        android:layout_width="150dp"
+        android:layout_width="144dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/midterm_date1"
         android:layout_alignStart="@+id/midterm_date1"
         android:layout_alignEnd="@+id/midterm_date1"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="335dp"
         android:ems="10"
         android:hint="YYYY-MM-DD"
         android:inputType="textPersonName"
@@ -314,19 +307,21 @@
         android:id="@+id/textView9"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textView7"
+        android:layout_alignStart="@+id/textView7"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginBottom="293dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="54dp"
         android:text="If you don't know the dates, how many midterms will you have?" />
 
     <EditText
         android:id="@+id/number_midterms"
         android:layout_width="133dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/textView9"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="261dp"
+        android:layout_marginTop="-7dp"
         android:ems="10"
         android:hint="Enter Number"
         android:inputType="number"
@@ -337,28 +332,41 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
         android:layout_alignStart="@+id/textView6"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
         android:layout_marginStart="0dp"
-        android:layout_marginBottom="383dp"
+        android:layout_marginTop="29dp"
         android:text="Midterm Exam Date(s)"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/number_assignments"
-        android:layout_width="150dp"
-        android:layout_height="37dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_width="133dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView10"
+        android:layout_alignStart="@+id/number_midterms"
+        android:layout_alignEnd="@+id/number_midterms"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="134dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginStart="-5dp"
+        android:layout_marginTop="-2dp"
+        android:layout_marginEnd="5dp"
         android:ems="10"
         android:hint="Enter Number"
         android:inputType="number"
         android:textAlignment="center"
         android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
+        android:layout_below="@+id/textView1"
+        android:layout_alignStart="@+id/textView1"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="11dp"
+        android:text="Course Weight"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
