--- a/app/src/main/res/layout/activity_secondinput.xml
+++ b/app/src/main/res/layout/activity_secondinput.xml
@@ -7,7 +7,7 @@
     tools:context=".SecondInputActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/overall_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/enter_courses"
