--- a/app/src/main/res/layout/activity_thirdsummary.xml
+++ b/app/src/main/res/layout/activity_thirdsummary.xml
@@ -44,7 +44,7 @@
     <ScrollView
         android:id="@+id/ScrollView1"
         android:layout_width="match_parent"
-        android:layout_height="334dp"
+        android:layout_height="323dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp">
@@ -57,7 +57,7 @@
             <TextView
                 android:id="@+id/course_summary"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="315dp" />
         </LinearLayout>
     </ScrollView>
 
