Used viewinflater to put form templates dynamically into second activity, transformed UniversityCourse into a Parcelable class so that objects can be passed from one activity to another.
Creating third summary output activity (probably a simple textview) and then passing object data to fourth activity which will show things on the calendar.

mprogress bar needs to be updated and exception throwing needs to be checked.

Google API only allows reading and writing data. Need code for a calendar display that provides a summary of study times that is preferably filterable.

--- a/app/src/main/res/layout/activity_thirdsummary.xml
+++ b/app/src/main/res/layout/activity_thirdsummary.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ThirdSummaryActivity">
 
     <TextView
         android:id="@+id/header"
@@ -62,7 +65,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/CalendarBtn"
+        android:id="@+id/PreviewCalendarBtn"
         android:layout_width="match_parent"
         android:layout_height="97dp"
         android:text="@string/preview_calendar" />
